--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+jupyter-protocol = "0.11.0"
+serde = "1.0.228"
+serde_json = "1.0.149"
+zmq = "0.10.0"
