--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,3 +26,5 @@ serde_json = "1"
 anyhow = "1"
 uuid = { version = "1", features = ["v4"] }
 futures = "0.3"
+ansi-to-tui = "7"
+syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "parsing", "regex-fancy"] }
