--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ tokio = { version = "1", features = ["full"] }
 # TUI
 ratatui = "0.29"
 crossterm = { version = "0.28", features = ["event-stream"] }
-tui-textarea = { version = "0.7", features = ["crossterm"] }
+tui-textarea = { version = "0.7", features = ["crossterm", "search"] }
 ratatui-image = "7"
 
 # Serialization
