--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,3 +28,4 @@ uuid = { version = "1", features = ["v4"] }
 futures = "0.3"
 ansi-to-tui = "7"
 syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "parsing", "regex-fancy"] }
+image = { version = "0.25.9", default-features = false, features = ["jpeg", "png"] }
