--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,3 +29,5 @@ futures = "0.3"
 ansi-to-tui = "7"
 syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "parsing", "regex-fancy"] }
 image = { version = "0.25.9", default-features = false, features = ["jpeg", "png"] }
+tui-markdown = "0.3"
+ratatui-core = "0.1"
